Update company branding to JFB and update README

--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -66,7 +66,7 @@
         <input type="submit" value="Submit Questionnaire">
         
         <div style="text-align: center; margin-top: 30px; color: #555; font-style: italic;">
-            Javier Ferrer Consulting Services
+            JFB Consulting Services
         </div>
     </form>
 </body>
